--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -2,12 +2,15 @@
     color: #FFFFFF;
     display: flex;
     width: 100%;
+    max-width: 100vw;
     height: 60px;
     justify-content: flex-end;
     align-items: flex-end;
     background-color: black;
     position: fixed;
     z-index: 1000;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 #navh3 {
