--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,9 +1,12 @@
 .project-background {
     width: 100%;
+    max-width: 100vw;
     height: 600px;
 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     margin-bottom: 15px;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
