--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -1,11 +1,14 @@
 .container {
     width: 100%;
+    max-width: 100vw;
     height: 635px;
     background-image: url("/background.jpg");
     display: flex;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 #hi {
@@ -68,8 +71,9 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 100px;
+    padding-left: 5%;
     padding-top: 100px;
+    box-sizing: border-box;
 }
 
 .right {
@@ -77,7 +81,8 @@ h3 {
     background-image: url("/Patil_Aryan.png");
     background-size: cover;
     background-position: center;
-    padding-right: 200px;
+    padding-right: 5%;
+    box-sizing: border-box;
 }
 
 .social-media {
